<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">出入计量</string>

    <string name="hint_welcome">欢迎您使用\n出入计量系统</string>
    <string name="hint_waiting">请稍后</string>
    <string name="btn_submit">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="action_next">下一步</string>
    <string name="hint_net_error">请求服务器失败，请检查网络</string>
    <string name="hint_splash_time">跳过(<xliff:g>%1$s</xliff:g>)</string>
    <string name="hint_permission">权限未全部开放，可能对程序有一定的影响！</string>
    <string name="hint_no_nfc">设备不支持NFC！</string>
    <string name="hint_no_nfc_msg">设备不支持NFC，请选择车牌号码</string>
    <string name="hint_nfc_open">NFC功能未开启，是否开启NFC?</string>
    <string name="hint_nfc_fail">读卡失败，请重新刷卡！</string>
    <string name="hint_update_title">APP有新的版本，是否更新？</string>
    <string name="hint_update_no_use">您的APP版本为最新版本，无需更新。</string>
    <string name="hint_update_permission">新的版本已更新，但您的存储权限暂未开启，如需更新，请打开权限后，到设置界面点击版本信息进行更新！</string>
    <string name="hint_data_null">暂无数据</string>
    <string name="hint_car_select">请选择车牌号码或刷卡</string>
    <string name="hint_card_nfc">请刷卡</string>
    <string name="hint_card_nfc_first">请先刷卡</string>
    <string name="hint_search_text">查询</string>
    <string name="hint_text_null">———</string>
    <string name="hint_truck_search">请输入要搜索的车牌号码</string>
    <string name="toast_net_error">服务器连接异常，请联系管理员。</string>
    <string name="toast_data_null_error">操作失败，请稍后重试</string>

    <!-- 登录页 -->
    <string name="login_title">出入计量系统</string>
    <string name="login_name">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_submit">登录</string>
    <string name="login_ip_hint">服务器地址为空，请进行设置</string>

    <!-- 服务器地址设置 -->
    <string name="ip_set_title">服务器配置</string>
    <string name="ip_set_address">请输入服务器地址</string>
    <string name="ip_set_point">.</string>
    <string name="ip_set_colon">:</string>
    <string name="ip_set_error">请输入有效的服务地址</string>

    <!-- 主页 -->
    <string name="main_title">首页</string>
    <string name="main_login_out">退出</string>
    <string name="main_menu_business">业务管理</string>
    <string name="main_menu_backup">数据备份</string>

    <!-- 业务管理 -->
    <string name="business_title">业务管理</string>
    <string name="business_no">业务编号:</string>
    <string name="business_material">物料名称:</string>
    <string name="business_company">运输单位:</string>
    <string name="business_truck">车牌号码:</string>
    <string name="business_date_pound_one">一磅时间:</string>
    <string name="business_date_pound_two">二磅时间:</string>
    <string name="business_date_start">开始时间</string>
    <string name="business_date_end">结束时间</string>

    <!-- 查询条件 -->
    <string name="business_search_title">查询条件</string>
    <string name="business_search_pound_date">二磅时间</string>
    <string name="business_search_date_start">开始时间</string>
    <string name="business_search_date_start_hint">请选择开始时间</string>
    <string name="business_search_date">——</string>
    <string name="business_search_date_end">结束时间</string>
    <string name="business_search_date_end_hint">请选择结束时间</string>
    <string name="business_search_business">业务编号:</string>
    <string name="business_search_business_hint">请输入业务编号</string>
    <string name="business_search_truck">车牌号码:</string>
    <string name="business_search_truck_hint">请输入车牌号码</string>
    <string name="business_search_cancel">取消</string>
    <string name="business_search_submit">确定</string>

    <!-- 业务详情 -->
    <string name="business_detail_title">业务详情</string>
    <string name="business_detail_no">业务编号:</string>
    <string name="business_detail_truck">车牌号码:</string>
    <string name="business_detail_material">物料名称:</string>
    <string name="business_detail_station">站点名称:</string>
    <string name="business_detail_sender">发货单位:</string>
    <string name="business_detail_receiver">收货单位:</string>
    <string name="business_detail_company">运输单位:</string>
    <string name="business_detail_date_pound_one">一磅时间:</string>
    <string name="business_detail_date_pound_two">二磅时间:</string>
    <string name="business_detail_net">净&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;重:</string>
    <string name="business_detail_gross">毛&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;重:</string>
    <string name="business_detail_tare">皮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;重:</string>

    <!-- 数据备份 -->
    <string name="backup_title">数据备份</string>
    <string name="backup_auto">自动备份</string>
    <string name="backup_manual">手动备份</string>
    <string name="backup_data_null">暂无备份</string>
    <string name="backup_date_null">无</string>
    <string name="backup_down">已备份</string>
    <string name="backup_no">未备份</string>
    <string name="backup_on">备份中</string>
    <string name="backup_success">备份成功</string>
</resources>
