<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_item_normal"
    android:orientation="vertical"
    android:padding="@dimen/view_height_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_height_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_no"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_business_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/view_height_10"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_height_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_material"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_business_material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/view_height_10"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_height_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_company"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_business_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/view_height_10"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_height_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_truck"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_business_truck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/view_height_10"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_height_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_date_pound_one"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_business_date_pound_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/view_height_10"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_height_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_date_pound_two"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_business_date_pound_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/view_height_10"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>
</LinearLayout>