<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgWhite"
    android:orientation="vertical"
    tools:context="cn.com.food.measure.ui.business.BusinessDetailActivity">

    <include layout="@layout/toolbar_custom_simple" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/view_height_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_no"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_truck"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_truck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_material"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_material"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_sender"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_sender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_receiver"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_receiver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_company"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_date_pound_one"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_date_pound_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_date_pound_two"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_date_pound_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_net"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_net"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_gross"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_gross"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_height_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_detail_tare"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />

                <TextView
                    android:id="@+id/tv_business_detail_tare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/view_height_10"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_17" />
            </LinearLayout>

            <include layout="@layout/view_divider_line" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
